--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,60 @@
 <resources>
+
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="get_started_w">500dp</dimen>
+    <dimen name="time_header_width">340dp</dimen>
+    <dimen name="time_header_marginLeft">10dp</dimen>
+    <dimen name="result_height">100dp</dimen>
+    <dimen name="time_header_textSize">30sp</dimen>
+    <dimen name="parent_width">0dp</dimen>
+    <dimen name="parent_height">0dp</dimen>
+    <dimen name="activity_height">100dp</dimen>
+    <dimen name="activity_margin">15dp</dimen>
+    <dimen name="activity_text_width">340dp</dimen>
+    <dimen name="activity_textSize">30sp</dimen>
+    <dimen name="button_layout_width">40dp</dimen>
+    <dimen name="small_button_width">40dp</dimen>
+    <dimen name="small_button_height">40dp</dimen>
+    <dimen name="small_button_textSize">14sp</dimen>
+    <dimen name="search_button_textSize">20sp</dimen>
+    <dimen name="error_message_textSize">25sp</dimen>
+    <dimen name="error_message_margin">20dp</dimen>
+    <dimen name="error_message_padding">10dp</dimen>
+    <dimen name="return_button_marginHorizontal">60dp</dimen>
+    <dimen name="return_button_marginVertical">30dp</dimen>
+    <dimen name="start_button_width">300dp</dimen>
+    <dimen name="start_button_height">100dp</dimen>
+    <dimen name="start_button_marginTop">50dp</dimen>
+    <dimen name="start_button_textSize">30sp</dimen>
+    <dimen name="start_banner_height">45dp</dimen>
+    <dimen name="start_banner_margin">30dp</dimen>
+    <dimen name="start_banner_textSize">25sp</dimen>
+    <dimen name="welcome_textSize">20sp</dimen>
+    <dimen name="welcome_margin">50dp</dimen>
+    <dimen name="select_box_marginHorizontal">15dp</dimen>
+    <dimen name="select_box_marginVertical">5dp</dimen>
+    <dimen name="select_textSize">30sp</dimen>
+    <dimen name="select_text_paddingTop">5dp</dimen>
+    <dimen name="first_select_text_marginBottom">5dp</dimen>
+    <dimen name="select_text_marginBottom">15dp</dimen>
+    <dimen name="budget_select_height">150dp</dimen>
+    <dimen name="top_budget_buttons_marginBottom">5dp</dimen>
+    <dimen name="bottom_budget_buttons_marginTop">5dp</dimen>
+    <dimen name="budget_button_width">120dp</dimen>
+    <dimen name="budget_button_height">60dp</dimen>
+    <dimen name="budget_button_marginHorizontal">20dp</dimen>
+    <dimen name="select_button_textSize">22sp</dimen>
+    <dimen name="group_button_width">150dp</dimen>
+    <dimen name="group_button_height">80dp</dimen>
+    <dimen name="time_box_paddingBottom">10dp</dimen>
+    <dimen name="time_button_width">100dp</dimen>
+    <dimen name="time_button_height">60dp</dimen>
+    <dimen name="time_button_marginHorizontal">10dp</dimen>
+    <dimen name="group_button_marginHorizontal">10dp</dimen>
+    <dimen name="find_button_width">300dp</dimen>
+    <dimen name="find_button_height">80dp</dimen>
+    <dimen name="find_button_marginTop">5dp</dimen>
+    <dimen name="find_button_textSize">28sp</dimen>
+    <dimen name="group_select_bot_paddingBottom">10dp</dimen>
+
 </resources>
