--- a/app/src/main/res/layout/content_selection.xml
+++ b/app/src/main/res/layout/content_selection.xml
@@ -17,23 +17,23 @@
         <!-- Select budget -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/select_box_marginHorizontal"
+            android:layout_marginVertical="@dimen/select_box_marginVertical"
             android:background="@drawable/textbox_border"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:text="@string/budget"
                 android:textAlignment="center"
                 android:textColor="@color/colorBlack"
-                android:textSize="30sp"
-                android:layout_marginBottom="5dp"/>
+                android:textSize="@dimen/select_textSize"
+                android:layout_marginBottom="@dimen/first_select_text_marginBottom"/>
             <!-- Budget buttons -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="@dimen/budget_select_height"
                 android:orientation="vertical"
                 android:gravity="center">
                 <LinearLayout
@@ -41,27 +41,27 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:layout_marginBottom="5dp">
+                    android:layout_marginBottom="@dimen/top_budget_buttons_marginBottom">
                     <!-- Free price button -->
                     <Button
                         android:id="@+id/button_free"
-                        android:layout_width="120dp"
-                        android:layout_height="60dp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="@dimen/budget_button_width"
+                        android:layout_height="@dimen/budget_button_height"
+                        android:layout_marginHorizontal="@dimen/budget_button_marginHorizontal"
                         android:background="@drawable/grey_button"
                         android:text="Free"
-                        android:textSize="22sp"
+                        android:textSize="@dimen/select_button_textSize"
                         android:onClick="BudgetSelect"
                         android:textColor="@color/colorWhite"/>
                     <!-- Low price button -->
                     <Button
                         android:id="@+id/button_low"
-                        android:layout_width="120dp"
-                        android:layout_height="60dp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="@dimen/budget_button_width"
+                        android:layout_height="@dimen/budget_button_height"
+                        android:layout_marginHorizontal="@dimen/budget_button_marginHorizontal"
                         android:background="@drawable/grey_button"
                         android:text="Low"
-                        android:textSize="22sp"
+                        android:textSize="@dimen/select_button_textSize"
                         android:onClick="BudgetSelect"
                         android:textColor="@color/colorWhite"/>
                 </LinearLayout>
@@ -70,27 +70,27 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
+                    android:layout_marginTop="@dimen/bottom_budget_buttons_marginTop">
                     <!-- Mid price button -->
                     <Button
                         android:id="@+id/button_mid"
-                        android:layout_width="120dp"
-                        android:layout_height="60dp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="@dimen/budget_button_width"
+                        android:layout_height="@dimen/budget_button_height"
+                        android:layout_marginHorizontal="@dimen/budget_button_marginHorizontal"
                         android:background="@drawable/grey_button"
                         android:text="Mid"
-                        android:textSize="22sp"
+                        android:textSize="@dimen/select_button_textSize"
                         android:onClick="BudgetSelect"
                         android:textColor="@color/colorWhite"/>
                     <!-- High price button -->
                     <Button
                         android:id="@+id/button_high"
-                        android:layout_width="120dp"
-                        android:layout_height="60dp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="@dimen/budget_button_width"
+                        android:layout_height="@dimen/budget_button_height"
+                        android:layout_marginHorizontal="@dimen/budget_button_marginHorizontal"
                         android:background="@drawable/grey_button"
                         android:text="High"
-                        android:textSize="22sp"
+                        android:textSize="@dimen/select_button_textSize"
                         android:onClick="BudgetSelect"
                         android:textColor="@color/colorWhite"/>
                 </LinearLayout>
@@ -101,9 +101,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
-            android:paddingBottom="10dp"
+            android:layout_marginHorizontal="@dimen/select_box_marginHorizontal"
+            android:layout_marginVertical="@dimen/select_box_marginVertical"
+            android:paddingBottom="@dimen/time_box_paddingBottom"
             android:background="@drawable/textbox_border"
             android:layout_gravity="center"
             android:orientation="vertical">
@@ -113,9 +113,9 @@
                 android:text="@string/time"
                 android:textAlignment="center"
                 android:textColor="@color/colorBlack"
-                android:textSize="30sp"
-                android:paddingTop="5dp"
-                android:layout_marginBottom="15dp"/>
+                android:textSize="@dimen/select_textSize"
+                android:paddingTop="@dimen/select_text_paddingTop"
+                android:layout_marginBottom="@dimen/select_text_marginBottom"/>
             <!-- Time buttons -->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -125,34 +125,34 @@
                 <!-- Morning button -->
                 <Button
                     android:id="@+id/button_morning"
-                    android:layout_width="100dp"
-                    android:layout_height="60dp"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_width="@dimen/time_button_width"
+                    android:layout_height="@dimen/time_button_height"
+                    android:layout_marginHorizontal="@dimen/time_button_marginHorizontal"
                     android:background="@drawable/grey_button"
                     android:text="Morn"
-                    android:textSize="22sp"
+                    android:textSize="@dimen/select_button_textSize"
                     android:onClick="TimeSelect"
                     android:textColor="@color/colorWhite"/>
                 <!-- Afternoon button -->
                 <Button
                     android:id="@+id/button_afternoon"
-                    android:layout_width="100dp"
-                    android:layout_height="60dp"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_width="@dimen/time_button_width"
+                    android:layout_height="@dimen/time_button_height"
+                    android:layout_marginHorizontal="@dimen/time_button_marginHorizontal"
                     android:background="@drawable/grey_button"
                     android:text="Aft"
-                    android:textSize="22sp"
+                    android:textSize="@dimen/select_button_textSize"
                     android:onClick="TimeSelect"
                     android:textColor="@color/colorWhite"/>
                 <!-- Evening button -->
                 <Button
                     android:id="@+id/button_evening"
-                    android:layout_width="100dp"
-                    android:layout_height="60dp"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_width="@dimen/time_button_width"
+                    android:layout_height="@dimen/time_button_height"
+                    android:layout_marginHorizontal="@dimen/time_button_marginHorizontal"
                     android:background="@drawable/grey_button"
                     android:text="Eve"
-                    android:textSize="22sp"
+                    android:textSize="@dimen/select_button_textSize"
                     android:onClick="TimeSelect"
                     android:textColor="@color/colorWhite"/>
             </LinearLayout>
@@ -161,9 +161,9 @@
         <!-- Select group size -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/select_box_marginHorizontal"
+            android:layout_marginVertical="@dimen/select_box_marginVertical"
             android:background="@drawable/textbox_border"
             android:layout_gravity="center"
             android:orientation="vertical">
@@ -174,49 +174,50 @@
                 android:textAlignment="center"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorBlack"
-                android:textSize="30sp"
-                android:paddingTop="5dp"
-                android:layout_marginBottom="15dp"/>
+                android:textSize="@dimen/select_textSize"
+                android:paddingTop="@dimen/select_text_paddingTop"
+                android:layout_marginBottom="@dimen/select_text_marginBottom"/>
             <!-- Group size buttons -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_horizontal">
+                android:gravity="center_horizontal"
+                android:paddingBottom="@dimen/group_select_bot_paddingBottom">
                 <!-- Single in group button -->
                 <Button
                     android:id="@+id/button_single"
-                    android:layout_width="150dp"
-                    android:layout_height="80dp"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_width="@dimen/group_button_width"
+                    android:layout_height="@dimen/group_button_height"
+                    android:layout_marginHorizontal="@dimen/group_button_marginHorizontal"
                     android:background="@drawable/grey_button"
                     android:text="One"
-                    android:textSize="22sp"
+                    android:textSize="@dimen/select_button_textSize"
                     android:onClick="GroupSelect"
                     android:textColor="@color/colorWhite"/>
                 <!-- Many in group button -->
                 <Button
                     android:id="@+id/button_many"
-                    android:layout_width="150dp"
-                    android:layout_height="80dp"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_width="@dimen/group_button_width"
+                    android:layout_height="@dimen/group_button_height"
+                    android:layout_marginHorizontal="@dimen/group_button_marginHorizontal"
                     android:background="@drawable/grey_button"
                     android:text="Many"
-                    android:textSize="22sp"
+                    android:textSize="@dimen/select_button_textSize"
                     android:onClick="GroupSelect"
                     android:textColor="@color/colorWhite"/>
             </LinearLayout>
         </LinearLayout>
         <Button
             android:id="@+id/results_button"
-            android:layout_width="300dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="5dp"
+            android:layout_width="@dimen/find_button_width"
+            android:layout_height="@dimen/find_button_height"
+            android:layout_marginTop="@dimen/find_button_marginTop"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorWhite"
             android:background="@drawable/menu_button"
             android:text="Find Activity"
-            android:textSize="28sp"/>
+            android:textSize="@dimen/find_button_textSize"/>
 
     </LinearLayout>
 
